<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/top_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/top_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"></LinearLayout>

    <TextView
        android:id="@+id/txtEspacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
    android:id="@+id/cwFormulario"
    android:layout_width="match_parent"
    android:layout_height="550dp"
    android:layout_marginStart="30dp"
    android:layout_marginTop="50dp"
    android:layout_marginEnd="30dp"
    app:cardElevation="20dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txtEspacio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCita2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/Agendar"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/outline_perm_identity_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:hint="@string/nombre"
            android:inputType="text"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize,TextContrastCheck" />

        <EditText
            android:id="@+id/edtTelefono"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/outline_call_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:hint="@string/telefono"
            android:inputType="text"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize,TextContrastCheck" />

        <EditText
            android:id="@+id/edtEquipo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/outline_adf_scanner_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:hint="@string/equipo"
            android:inputType="text"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize,TextContrastCheck,DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/edtFecha"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/outline_calendar_month_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:hint="@string/date"
            android:inputType="text"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize,TextContrastCheck" />


        <EditText
            android:id="@+id/edtCorreo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/outline_email_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:hint="@string/correo"
            android:inputType="text"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize,TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEnviar"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttom_background"
            android:text="Enviar"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="HardcodedText,TextSizeCheck" />

    </LinearLayout>
</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cwLogo"
        android:layout_width="180dp"
        android:layout_height="90dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toTopOf="@+id/cwFormulario"
        app:layout_constraintEnd_toEndOf="@+id/cwFormulario"
        app:layout_constraintStart_toStartOf="@+id/cwFormulario"
        app:layout_constraintTop_toTopOf="@+id/cwFormulario">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_background">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/relleno"
                android:padding="23dp"
                android:src="@drawable/tenki"
                android:scaleType="centerCrop"></ImageView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>